k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: v14.nadheerkv.in
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000

      - path: /uploads
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

  - host: www.v14.nadheerkv.in
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000

      - path: /uploads
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
